kubernetes/namespace.yaml
# @format

apiVersion: v1
kind: Namespace
metadata:
  name: microfest # your own namespace here
