kubernetes/ingress.yaml
# @format

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: microfest
spec:
  rules:
    - host: microfest.example.com # your own host here
      http:
        paths:
          - backend:
              serviceName: microfest
              servicePort: http
  tls:
    - hosts:
        - microfest.example.com # your own host here
      secretName: tls # your own tls secret name here
